# bxb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .coverage  .env.example  Dockerfile  openapi.json  pyproject.toml
backend/app/: main.py  tasks.py  worker.py
backend/app/alembic/: env.py
backend/app/core/: auth.py  clickhouse.py  config.py  database.py  idempotency.py  jwt.py  rate_limiter.py  security.py  sorting.py
backend/app/models/: __init__.py  add_on.py  api_key.py  applied_add_on.py  applied_coupon.py  applied_tax.py  applied_usage_threshold.py  audit_log.py  billable_metric.py  billable_metric_filter.py  billing_entity.py  charge.py  charge_filter.py  charge_filter_value.py  commitment.py  coupon.py  credit_note.py  credit_note_item.py  currency.py  customer.py  (+35 more)
backend/scripts/: generate_openapi.py  generate_portal_openapi.py
backend/tests/: README.md  conftest.py  test_add_on_service.py  test_add_ons.py  test_advanced_aggregations.py  test_advanced_charges.py  test_api.py  test_api_keys.py  test_audit_logs.py  test_audit_service.py  test_auth_endpoints_smoke.py  test_auth_integration_smoke.py  test_auth_smoke.py  test_billable_metric_filters.py  test_billable_metrics.py  test_billing_entities.py  test_billing_entity_repository.py  test_charge_model_integration.py  test_charge_models.py  test_clickhouse.py  test_commitments.py  test_coupon_service.py  test_coupons.py  test_credit_note_service.py  test_credit_notes.py  test_currency.py  test_customers.py  test_daily_usage.py  test_dashboard.py  test_data_exports.py  test_dunning_campaigns.py  test_dunning_campaigns_api.py  test_dunning_service.py  test_email_service.py  test_entitlements.py  test_events.py  test_features.py  test_fees.py  test_filter_api.py  test_generate_portal_openapi.py  (+54 more)
(+441 files in other folders)
