[project]
name = "bxb"
version = "0.3.0"
description = "BoxBilling API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.131.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "arq>=0.25.0",
    "httpx>=0.27.0",
    "stripe>=14.0.1",
    "alembic>=1.18.3",
    "clickhouse-connect>=0.8.0",
    "weasyprint>=62.0",
    "aiosmtplib>=3.0",
    "pyjwt>=2.8.0",
    "sentry-sdk[fastapi]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit>=3.6.2",
    "stripe>=14.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/alembic/*", "app/worker.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["app/alembic/versions/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # Allow Depends() in FastAPI function arguments

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow long lines in tests (dict literals)

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["app/alembic/"]

[[tool.mypy.overrides]]
module = "app.models.*"
disable_error_code = ["misc"]  # Allow subclassing Base (has type Any)
